--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,10 @@
  *= require_tree .
  *= require_self
  */
+ 
+// Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "bootstrap";
 
 h1, h2, h3 {
   font-family: 'Open Sans', sans-serif;
+}
