--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,10 @@
-<h2>Welcome to Military Battle Club</h2>
+<div class="home-callout text-center container-fluid">
+  <h2>Welcome to Military Battle Club</h2>
+  <h5>Our goal has been to underpin a hobby. 
+  For a few years people who want to buy and use replica guns for Airosft or reenacting now we have grown in size to accommodate a wide range of living historians and re-enactors covering the whole of the 20th Century and beyond. 
+  What we offer is for you to become a member and be covered by our PLI. 
+  We do not offer insurance, just like any other re-enactment association or group. 
+  You are simply covered by ours*.
+
+We do not interfere with your group's day-to-day running, we do not tell you when and where you can go. You keep your own rules and regulations**</h5>
+</div>
