--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="/Join">Join<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link active" href="/join">Join<span class="sr-only">(current)</span></a>
         </div>
       </div>
     </nav>
-    <div class="container">
-      <%= yield %>
-    </div>
+    
+    <%= yield %>
+    
   </body>
 </html>
