--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,7 +16,10 @@
  
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
+// Typography Styles
 h1, h2, h3,h4,h5 {
   font-family: 'Open Sans', sans-serif;
 }
@@ -32,11 +35,13 @@ h1, h2, h3,h4,h5 {
   background: linear-gradient(90deg, rgba(75,83,32,1) 0%, rgba(75,83,32,1) 44%, rgba(129,138,83,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4b5320",endColorstr="#818a53",GradientType=1);
 }
+
 .home-callout {
   padding-top: 50px;
   padding-bottom: 100px;
   color: white;
 }
+
 .navbar-light .navbar-brand,
 .navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
   color: white;
