--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,11 @@
 <div class="home-callout text-center container-fluid">
   <h2>Welcome to Military Battle Club</h2>
-  <h5>Our goal has been to underpin a hobby. 
-  For a few years people who want to buy and use replica guns for Airosft or reenacting now we have grown in size to accommodate a wide range of living historians and re-enactors covering the whole of the 20th Century and beyond. 
-  What we offer is for you to become a member and be covered by our PLI. 
+  <h5>Our goal is to support your hobby. 
+  For a few years people who want to buy and use replica guns for Airsoft or reenacting or 
+  target shooting have struggled because they do not meet the legal requirements to be able to buy one.
+  What we offer is for you to join us and become a member of MBC Reenactment Society and with this membership
+  be able to continue or further your interest in replica guns.
   We do not offer insurance, just like any other re-enactment association or group. 
-  You are simply covered by ours*.
-
-We do not interfere with your group's day-to-day running, we do not tell you when and where you can go. You keep your own rules and regulations**</h5>
+  We do not interfere with your group's day-to-day running, we do not tell you when and where you can go.
+  Joining this society makes you a member of a Historical reenactment society that has 3rd Party Public Liability Insurance (PLI).</h5>
 </div>
