--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,3 +68,17 @@ h1, h2, h3,h4,h5 {
   font-family: 'Open Sans', sans-serif;
   font-weight: 800;
 }
+
+.ww2-image {
+  border-radius: 8px;
+  max-width: 75%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+ .ww2-image2 {
+   top: 50px;
+   margin-bottom: 25px;
+   background: #f5f5f5;
+ }
