--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,3 +9,22 @@
   We do not interfere with your group's day-to-day running, we do not tell you when and where you can go.
   Joining this society makes you a member of a Historical reenactment society that has 3rd Party Public Liability Insurance (PLI).</h5>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card card-body ww2-image2">
+        <h5 class="text-center d-inline p-2 bg-light text-dark">WW2 Fallschrimjäger can be seen throwing grenades after a river crossing.</h5>
+        <br>
+        <img src="images/MBC1.jpg" alt="WW2 action photo" width="500" height="333" class="img-fluid ww2-image">
+        <br>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card card-body ww2-image2">
+        <h5 class="text-center  d-inline p-2 bg-light text-dark">WW2 Fallschrimjäger taking up a defensive position.</h5>
+        <br>
+        <img src="images/MBC2.jpg" alt="WW2 action photo" width="500" height="333" class="img-fluid ww2-image">
+      </div>  
+    </div>
+  </div>
+</div>
