--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,10 @@
             <span class="sr-only">(current)</span>
             Join
           <% end %>
+          <%= link_to new_contact_path, class: "nav-item nav-link active" do %>
+            <span class="sr-only">(current)</span>
+            Contact Us
+          <% end %>
         </div>
       </div>
     </nav>
