Added page layout got logout working fixed images

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<div class = "container">
+<div class = "container home-padding">
   <div class="row">
     <div class="col-6 offset-3">
       <h3 class="text-center">Contact Us</h3>
