--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
       <div class="card card-body ww2-image2">
         <h5 class="text-center d-inline p-2 bg-light text-dark">WW2 Fallschrimjäger can be seen throwing grenades after a river crossing.</h5>
         <br>
-        <img src="images/MBC1.jpg" alt="WW2 action photo" width="500" height="333" class="img-fluid ww2-image">
+        <%= image_tag ("MBC1.jpg"), class: "img-fluid ww2-image" %>
         <br>
       </div>
     </div>
@@ -23,7 +23,7 @@
       <div class="card card-body ww2-image2">
         <h5 class="text-center  d-inline p-2 bg-light text-dark">WW2 Fallschrimjäger taking up a defensive position.</h5>
         <br>
-        <img src="images/MBC2.jpg" alt="WW2 action photo" width="500" height="333" class="img-fluid ww2-image">
+        <%= image_tag ("MBC2.jpg"), class: "img-fluid ww2-image" %>
       </div>  
     </div>
   </div>
