--- a/app/views/pages/join.html.erb
+++ b/app/views/pages/join.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center home-padding">
   <h2>How to Join</h2>
   <p>We are Military Battle Club. Our group focuses on creating a community of like minded people who are interested in military reenacting. Our group members take part in their chosen type of reenacting up and down the country every weekend. The reason for joining the group is that individuals, to be able to purchase replica guns for their chosen reenactment need to meet the Governments requirements for being able to buy a replica. This group facilitates this legal requirement. We provide no activities or service other than meeting the requirement to be a Historical Reenactment Society with 3rd party public liability insurance. Should you require any form of insurance for your chosen weekend activity then it is your responsibility to take out that insurance yourself. Once you have taken out this membership which is £40 for a year you will be eligible to buy replica guns from most retailers in the UK.
      </p>
