--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,6 +41,10 @@ h1, h2, h3,h4,h5 {
   padding-bottom: 100px;
   color: white;
 }
+.home-padding {
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
 
 .navbar-light .navbar-brand,
 .navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
@@ -76,9 +80,14 @@ h1, h2, h3,h4,h5 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  top: 50px;
+  margin-bottom: 25px;
+  background: #f5f5f5;
 }
- .ww2-image2 {
-   top: 50px;
-   margin-bottom: 25px;
-   background: #f5f5f5;
- }
+ 
+h2, .h2 {
+    font-size: 1rem;
+}
+h3, .h3 {
+    font-size: 1rem;
+}
