--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,30 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class = "container home-padding">
+  <div class="row">
+    <div class="col-6 offset-3">
+      <h3 class="text-center">Forgot your password?</h3>
+    </div>
   </div>
+  <div class="row">
+    <div class="col-6 offset-3">
+      <div class="card card-header">
+        <div class="form-group">
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
+          
+            <div class="field form-group">
+              <%= f.label :email %><br />
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+            </div>
+          
+            <div class="actions form-group">
+              <%= f.submit "Send me reset password instructions",class: 'btn btn-primary'  %>
+            </div>
+          <% end %>
+          
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
