--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,21 @@
             <span class="sr-only">(current)</span>
             Contact Us
           <% end %>
+          <% if user_signed_in? %>
+            <%= link_to destroy_user_session_path, class: "nav-item nav-link active" do %>
+                  <span class="sr-only">(current)</span>
+                  Log Out
+              <% end %>
+          <% else %>
+            <%= link_to new_user_session_path, class: "nav-item nav-link active" do %>
+              <span class="sr-only">(current)</span>
+              Log In
+            <% end %>
+            <%= link_to new_user_registration_path, class: "nav-item nav-link active" do %>
+              <span class="sr-only">(current)</span>
+              Sign Up
+            <% end %>
+          <% end %>
         </div>
       </div>
     </nav>
