--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,14 +1,31 @@
-<div class = "container  home-padding">
-  <div class="row">
-    <div class="col-6 offset-3">
-      <h3 class="text-center">Sign up</h3>
-    </div>
+<div class = "container home-padding">
+  <!--<div class="row">-->
+  <!--  <div class="col-6 offset-3">-->
+  <!--    <h3 class="text-center">Sign up</h3>-->
+  <!--  </div>-->
+  <!--</div>-->
+  <div class="container text-center">
+    <h1>How to Join</h1>
+    <p>We are Military Battle Club. Our group focuses on creating a community of like minded people 
+    who are interested in military reenacting. Our group members take part in their chosen type of 
+    reenacting up and down the country every weekend. </p>
+    <p>The reason for joining the group is that
+    individuals, to be able to purchase replica guns for their chosen reenactment need to meet the
+    Governments requirements for being able to buy a replica. This group facilitates this legal 
+    requirement.</p>
+    <p>We provide no activities or service other than meeting the requirement to be a 
+    Historical Reenactment Society with 3rd party public liability insurance. 
+    Should you require any form of insurance for your chosen weekend activity then it is your 
+    responsibility to take out that insurance yourself.</p>
+    <p>Once you have taken out this membership 
+    which is £40 for a year you will be eligible to buy replica guns from most
+    retailers in the UK.</p>
   </div>
   <div class="row">
     <div class="col-6 offset-3">
       <div class="card card-header">
         <div class="form-group">
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html: {id: 'join_form'}) do |f| %>
             <%= render "devise/shared/error_messages", resource: resource %>
           
             <div class="field form-group">
@@ -28,9 +45,23 @@
               <%= f.label :password_confirmation %><br />
               <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
             </div>
+            
+            <div class="field form-group">
+              <%= label_tag :card_number, "Credit Card Number" %>
+              <%= text_field_tag :card_number, nil, name: nil, class: "form-control" %>
+            </div>
+            <div class="field form-group">
+              <%= label_tag :card_code, "Security Code on Card (CVV)" %>
+              <%= text_field_tag :card_code, nil, name: nil, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= label_tag :card_month, "Card Expiration" %>
+              <%= select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month" } %>
+              <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year" } %>
+            </div>
           
             <div class="actions  form-group">
-              <%= f.submit 'Submit',class: 'btn btn-primary' %>
+              <%= f.submit 'Submit',class: 'btn btn-primary', id: 'form-submit-btn' %>
             </div>
             <%= render "devise/shared/links" %>
           <% end %>
